--- a/pages/nf4514/n12676021.md
+++ b/pages/nf4514/n12676021.md
@@ -52,6 +52,25 @@
  川普的支持者表示，川普在演讲中没有煽动暴力，是主流媒体误解了1月6日的集会，且有人渗透到了抗议人群之中。也有人担心美国正处于社会主义或马克思主义的边缘。
 </p>
 <p>
+ 以下是1月9日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
+</p>
+<p>
+ 6:30
+</p>
+<p>
+ 拜登周五（1月8日）披露了新国家安全委员会（NSC）团队的21项任命，称其成员“多元化且经验丰富”。
+ <br/>
+ 许多被任命的人曾在奥巴马政府中工作过，其中一些人在白宫，另一些人在奥巴马的国家安全委员会。
+</p>
+<p>
+ “国家安全委员会在维护我们国家安全方面发挥着关键作用。”拜登在一份声明中说。
+</p>
+<p>
+ 根据白宫的说法，国家安全委员会是“总统与他的高级国家安全顾问和内阁官员审议国家安全和外交政策事务的主要平台”。
+</p>
+<p>
+</p>
+<p>
  以下是1月8日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
 </p>
 <p>
