--- a/pages/nf4514/n12678707.md
+++ b/pages/nf4514/n12678707.md
@@ -50,6 +50,21 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 前总统老布什的妹妹染疫去世
+</h3>
+<p>
+ 南希·布什·埃利斯（Nancy Bush Ellis），前美国总统老布什的妹妹、小布什的姨母周日在马萨诸塞州康科德的家中因与COVID-19相关的并发症而去世。享年94岁。
+</p>
+<p>
+ 埃利斯的儿子告诉媒体，埃利斯于12月30日因发烧住院，并检测出COVID-19呈阳性。
+</p>
+<p>
+ 埃利斯于1926年2月4日，是普雷斯科特（Prescott）和多萝西·沃克·布什（Dorothy Walker Bush），是五个孩子中的第三个，比美国第41届总统老布什小两岁。
+</p>
+<p>
+ 她曾是自由民主党人，在1979年当其兄老布什宣布竞选总统时，加入了共和党。老布什于2018年12月去世。
+</p>
+<h3>
  纽约州一周新增十万例确诊
 </h3>
 <p>
