--- a/pages/nsc412/n12678286.md
+++ b/pages/nsc412/n12678286.md
@@ -50,6 +50,35 @@
  。
 </h4>
 <h3>
+ 16:48 拜登想恢复奥巴马时期古巴政策恐面临挑战
+</h3>
+<p>
+ 《国会山报》报导，川普政府对古巴的强硬态度可能会使拜登恢复奥巴马时期古巴政策的努力复杂化。
+</p>
+<p>
+ 据报道，国务院正在权衡一项将古巴重新列入支持恐怖主义国家名单的提案，这一步骤旨在使拜登更难打开美国和古巴的关系。
+</p>
+<p>
+ 自川普总统2017年1月上任以来，已经推翻了民主党前任总统奥巴马所追求的与古巴缓解关系的政策。川普在2017年6月宣布新的古巴政策，限制美国民众前往古巴旅行及限制美国与古巴军事、情报部门有关的企业实体商业往来。川普表示，这些往来只能使古巴独裁政权变得更富有，美国将不与古巴谈判，除非古巴实现自由。
+</p>
+<h3>
+ 16:30 参议员曼钦谈是否支持2000美元纾困支票
+</h3>
+<figure class="wp-caption alignnone" id="attachment_12679458" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1288857582.jpg">
+  <img alt="" class="size-large wp-image-12679458" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1288857582-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  民主党参议员乔·曼钦（Joe Manchin）讲话资料照。(Photo by Tasos Katopodis/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 周日接受CNN采访时，民主党参议员乔·曼钦（Joe Manchin）被问到是否将会支持2000美元的疫情纾困支票时，他没有做直接回答，但表示，“这不是一个yes或no的问题。”
+</p>
+<p>
+ 他表示，反对向已经收到支票的美国人提供更多支票，“我们已经做了很多这样的事情”。
+</p>
+<h3>
  15:50 万豪和BCBSA将暂停捐款给挑战拜登胜选的议员
 </h3>
 <p>
