--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -1,4 +1,4 @@
-### 【更新】哈佛专家：弹劾川普是违宪行为
+### 【1.10更新】哈佛专家：弹劾川普是违宪行为
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
