--- a/pages/nf4514/n12680567.md
+++ b/pages/nf4514/n12680567.md
@@ -43,6 +43,14 @@
 <h3>
  专家：封锁防疫无效 勿重蹈覆辙
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12656468" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/146037.jpg">
+  <img alt="" class="size-large wp-image-12656468" src="https://i.epochtimes.com/assets/uploads/2020/12/146037-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2021年新年美国仍有部分商场开门营业。图为疫情发生前的曼哈顿34街梅西百货。（Bryan R. Smith / AFP）
+ </figcaption><br/>
+</figure><br/>
 <p>
  金融记者、作家和专栏评论员斯蒂芬·摩尔（Stephen Moore）撰文写道，他认为彻底关闭经济来抵御病毒是无效的，并列出了几个理由：
 </p>
@@ -67,6 +75,14 @@
 <h3>
  疫情爆发 大陆多地要求到外地过年先报批
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12673490" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/478375.jpg">
+  <img alt="" class="size-large wp-image-12673490" src="https://i.epochtimes.com/assets/uploads/2021/01/478375-600x447.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  据中媒中新社等报导，黑龙江、辽宁、北京、河北相继传出本土病例疫情，当地医师透过微信吹哨警告“疫情真的非常严重”。图为河北省爆出疫情的石家庄市一社区正在进行核酸检测。（中医新设）
+ </figcaption><br/>
+</figure><br/>
 <p>
  传统的中国新年将至，中共官方从鼓励民众就地过年，到要求机关、国企员工要到外地过年，需事先报批。
 </p>
@@ -82,6 +98,14 @@
 <h3>
  纽约感染变种病毒增4例 长岛染疫源不明
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12666550" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/146135.jpg">
+  <img alt="" class="size-large wp-image-12666550" src="https://i.epochtimes.com/assets/uploads/2021/01/146135-600x468.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为纽约州长库默。（Mike Groll/Office of Governor Andrew M. Cuomo）
+ </figcaption><br/>
+</figure><br/>
 <p>
  在1月4日出现第一例没有旅行史的确诊者后，纽约州长库默1月9日表示，纽约州内再检测出3例类似英国的变种病毒确诊者，其中两例位于纽约上州的萨拉托加县（Saratoga county），另一名感染者住在长岛，他们都与首例患者无关。
 </p>
@@ -94,6 +118,14 @@
 <h3>
  新研究：辉瑞疫苗对变体病毒也有效
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12673055" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1294930366.jpg">
+  <img alt="" class="size-large wp-image-12673055" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1294930366-600x415.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2021年1月6日，在佛罗里达州庞帕诺海滩市（Pompano Beach）准备为养老院居民接种的辉瑞疫苗。 (Joe Raedle/Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <p>
  一项新研究发现，辉瑞制药（Pfizer）的COVID-19（中共病毒）疫苗对防止在英国和南非爆发的两种传染性更高的病毒变体也有效。
 </p>
