--- a/pages/nsc413/n12680567.md
+++ b/pages/nsc413/n12680567.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2021年01月11日讯】（大纪元记者徐简综合报导）根据约翰·霍普金斯大学的统计数据，全球已知的
+ 【大纪元2021年01月11日讯】（大纪元记者徐简、戴芙若、李言综合报导）根据约翰·霍普金斯大学的统计数据，全球已知的
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
@@ -43,6 +43,39 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 美众议员染疫
+</h3>
+<p>
+ 美国国会众议员、新泽西民主党人沃森·科尔曼（Watson Coleman）做了COVID-19（中共病毒引发的疾病）后，结果呈阳性。
+</p>
+<p>
+ 据多家新闻媒体报导，“她认为，她在（上周三）于美国国会大厦发生的保护隔离期间被感染。”
+</p>
+<p>
+ 上周三（1月6日），在美国国会举行联系会议、认证2020年总统大选结果。当天，川普（特朗普）支持者在华盛顿集会，抗议和提醒国会大选被窃取。过程中，有人闯进国会大厦造成破坏。
+</p>
+<p>
+ 议员们因此被疏散。媒体认为，有些人包括科尔曼忽略了防疫规则，未戴口罩。
+</p>
+<h3>
+ 英卫生部长：尚不清楚疫苗可否降低Covid-19传播风险
+</h3>
+<p>
+ 英国卫生部长马特·汉考克（Matt Hancock）表示，目前尚不清楚疫苗接种能多大程度降低冠状病毒（中共病毒）传播风险。
+</p>
+<p>
+ 汉考克说：“我们知道，这种疫苗减少了您感染Covid（中共病毒）、然后住院或死亡的机会。”
+</p>
+<p>
+ “我们还不知道……接种疫苗后，即使没有症状，您传播Covid（中共病毒）的可能性有多大。”
+</p>
+<p>
+ 他补充说：“我们非常希望在您接种疫苗后，对其传播性产生重大下行影响。”
+</p>
+<p>
+ 汉考克于周一的新闻发布会上发表上述评论。他还宣布在英国已经有大约230万人接种疫苗。
+</p>
 <h3>
  罗马学生静坐抗议  要求重新开放学校
 </h3>
