--- a/pages/nsc418/n12680567.md
+++ b/pages/nsc418/n12680567.md
@@ -44,6 +44,29 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 洛杉矶正经历着几十年来的“最严重灾难”
+</h3>
+<p>
+ 洛杉矶公共卫生官员称这是该县数十年来经历的“最严重的灾难”。
+</p>
+<p>
+</p>
+<p>
+ 洛杉矶周一报告了12,617例新病例，使该县的感染总数达到932,697。据报导周一还有137人死亡，死亡总人数增加到12,387人。
+</p>
+<p>
+ 根据最新的健康数据，在过去的7天中，该县报告了1,500多起与Covid相关的死亡。自11月开始激增以来，洛杉矶县的死亡人数增加了惊人的1000％以上。
+</p>
+<p>
+ 由于官员继续解决基础设施问题，例如氧气供应不足，人员资源有限以及床位不足，目前有近8000人住院。官员说，截至周一下午，全县共有650张病床和46张ICU病床。
+</p>
+<p>
+ 洛杉矶公共卫生官员芭芭拉·费雷尔（Barbara Ferrer）在周一的新闻发布会上说，洛杉矶县每分钟平均有10个人对Covid-19测试阳性。她说：“这种激增对我们的家庭和当地医院造成的破坏性影响是该县数十年来遭受的最严重的灾难。”
+</p>
+<p>
+ 洛杉矶的医院接受了220,000剂疫苗，大约160,000名一线医护人员已经接种疫苗。上周，医院开始向合格人员提供第二剂疫苗，目前已经为22,000多名医护人员进行了全程疫苗接种。
+</p>
+<h3>
  英国被告知要为最严重疫情做好准备
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12682056" style="width: 600px">
