--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -115389,4 +115389,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01130202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01130251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
