--- a/pages/p1/958910.md
+++ b/pages/p1/958910.md
@@ -1,4 +1,4 @@
-### 张晓明对香港发怪论 一句话引网络炸锅(图)
+### 中国疫情告急 多省破天荒延后或取消“两会”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="张晓明" src="https://img3.secretchina.com/pic/2020/1-5/p2598051a395777457-ss.jpg" style="height:338px; width:600px"/>
+  <img alt="两会 河北" src="https://img3.secretchina.com/pic/2020/11-29/p2828421a862500567-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   张晓明（图片来源：视频截图）
+   目前河北已宣布押后举行全省政协及人大会议。（图片来源：JOHANNES EISELE/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,72 +29,56 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月17日讯】（看中国记者李文隆综合报导）因为治理
+  【看中国2021年1月13日讯】（看中国记者黎小葵综合报导）中国的
   <strong>
-   香港
-  </strong>
-  无能而被降职的原中央港澳办主任、前中联办主任
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/张晓明" target="_blank">
-    张晓明
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  ，又再恢复
+  卷土重来，迄今东北、华北多地已处于封城状态。官方公布11日新增55例确诊病例，其中又以河北省最为严重，目前
   <strong>
-   战狼
+   河北
   </strong>
-  本色，日前又发表雷人言论，声称“民主自由人权前应加上‘
+  已宣布延后举行全省政协及人大会议。有民间认为，今年多省的“
   <strong>
-   爱国
+   两会
   </strong>
-  ’”。此语引发网络炸锅。
+  ”或因疫情被迫
+  <strong>
+   取消
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据自由亚洲电台报导，中共前国务院港澳办主任
-  <span href="https://zh.wikipedia.org/wiki/%E5%BC%B5%E6%9B%89%E6%98%8E" target="_blank">
-   张晓明
+  <strong>
+   多地封城 疫情严峻
+  </strong>
+ </p>
+ <p>
+  近日中国大陆的疫情急速扩散，除东北地区的辽宁省外，毗邻北京的
+  <span href="https://www.secretchina.com/news/gb/tag/河北" target="_blank">
+   河北
   </span>
-  ，被指处理反送中运动不当，2月被降为副主任。然而随着北京在港强推国安法及连串打压，他逐步回复战狼本色。在周二的基本法颁布30周年高峰论坛上，他发布视像讲话时抛出奇谈怪论，声称“民主自由人权前应加上爱国”
- </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   【京官就香港问题发伟论】
-   <br>
-    【"民主自由人权前应加上'爱国'"】
-    <br>
-     <br>
-      前国务院港澳办主任张晓明，被指处理反送中运动不当，2月被降为副主任。然而随着北京在港强推国安法及连串打压，他逐步回复战狼本色。在周二的基本法颁布30周年高峰论坛上，他发布视像讲话，意气风发地发表伟论
-      <span href="https://twitter.com/hashtag/%E7%88%B1%E5%9B%BD%E5%85%88%E4%BA%8E%E8%87%AA%E7%94%B1%E5%92%8C%E4%BA%BA%E6%9D%83?src=hash&amp;ref_src=twsrc%5Etfw">
-       #爱国先于自由和人权
-      </span>
-      <span href="https://t.co/HBMn4CaTYs">
-       pic.twitter.com/HBMn4CaTYs
-      </span>
-     </br>
-    </br>
-   </br>
-  </p>
-  — 自由亚洲电台 (@RFA_Chinese)
-  <span href="https://twitter.com/RFA_Chinese/status/1328591096348291075?ref_src=twsrc%5Etfw">
-   November 17, 2020
-  </span>
- </blockquote>
- <p>
-  对此，网友一片骂声：
+  省疫情形势也非常严峻。另据河北省政府新闻办12日通报​​，12日0至10时，河北省新增21例本土确诊，其中石家庄新增16例（藁城区15例，开发区1例）；邢台新增5例。但到12日傍晚5时许，石家庄市副市长孟祥红证实，截至12日中午12时，仅石家庄新增确诊就已达21人，无症状感染者是12人。
  </p>
  <p>
-  “自由、民主、人权之前都不许附加任何条件，包括所谓的
-  <span href="https://www.secretchina.com/news/gb/tag/爱国" target="_blank">
-   爱国
-  </span>
-  。”
+  但监于中共官方历来对疫情数据有所隐瞒，因此真实数据尚待调查。
  </p>
  <p>
-  “这眼神儿，跟外交部那个谁一样一样的。”
+  河北省政府12日紧急召开新闻发布会，对石家庄市、邢台市、廊坊市实施“全域封闭管理”，人员、车辆非必要不外出。河北省三河市、廊坊市固安县等地12日也发布紧急通知，开展全员核酸检测和居家7天隔离隔离，三河市甚至自12日中午起公车停驶，复驶时间不知。
+ </p>
+ <p>
+  <strong>
+   多省
+   <span href="https://www.secretchina.com/news/gb/tag/两会" target="_blank">
+    两会
+   </span>
+   延后或取消
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +93,7 @@
   </div>
  </center>
  <p>
-  “共产党谈爱国，是笑话，共产党要打破的就是旧制度。工人无国界，全世界无产阶级联合起来是谁说的。”
+  河北省人大常委会决定推迟原定1月25日召开的省人大会议，具体召开时间未定，同期举行的河北省政协会议亦预计跟随推迟。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +108,7 @@
   </div>
  </center>
  <p>
-  “叫他先去中印边界做前线表示真爱国再说。”
+  另翻查资料发现，不仅是河北省，湖北省也未公布省政协及人大会议召开日期，而以往这类会议召开时间一般会在1月上旬或更早公布，并于1月中旬之后进行会议。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +123,7 @@
   </div>
  </center>
  <p>
-  “这货跟他爷爷去讲，要爱满洲国！”
+  一名湖北居民也对自由亚洲电台表示，每年省一级“两会”都在一月中旬举行，但是今年没有相关消息，“从12月份开始开会，先是区（人大），市（人大）、省人大，三级政府会议开完了，到三月份开全国两会。我们小区现在又开始刷健康码进小区，已经几个月没有刷了，现在又开始刷健康码，关键问题在这里。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,11 +138,9 @@
   </div>
  </center>
  <p>
-  “哈哈哈哈，建议这位领导吃饭喝水睡觉之前朗读《
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  谈治国理政》全文一遍，没读完不准吃饭喝水睡觉。”
+  <strong>
+   民间传闻定为“谣言”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +155,7 @@
   </div>
  </center>
  <p>
-  “爱国主义是流氓最后的避难所……。”
+  随着疫情不断恶化，各地警方也对民间管控再度升级，民间传闻几乎全部视为“谣言”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +170,7 @@
   </div>
  </center>
  <p>
-  “你就直接说爱党好不好？做人能不能坦率一点？”
+  武汉警方稍早发布消息，1月11日，武汉市部分圈群流传一则关于“汉正街已经确定两例，现通知汉正街关门全员在做核酸检测”的消息，经核查，此消息不实。对故意传播、散布谣言信息者，一经查实，公安机关将依法惩处。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,26 +185,7 @@
   </div>
  </center>
  <p>
-  “反共才是爱国，否则只是爱党。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  现年57岁的张晓明，2012年12月起担任中联办主任5年；2017年9月调任港澳办主任。担任港澳办主任两年期间，港府提出《逃犯条例》修订（又称送中条例），引爆一场香港史上最大的“
-  <span href="https://www.secretchina.com/news/gb/tag/反送中" target="_blank">
-   反送中
-  </span>
-  ”抗争风暴，张晓明被指扮演积极推动恶法、升级打压的角色。
+  对此，民间感叹说，在官方看来，非经官方审核通过的消息，全都是谣言。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,11 +204,9 @@
   </ins>
  </center>
  <p>
-  自送中条例2019年3月推出以来，张晓明同年5月开腔力撑修例是“必要、适当、合理及合法”。反送中运动6月爆发，二百万人上街力促撤回恶法、追究警暴后，港澳办7月底起多次就
-  <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
-   香港
-  </span>
-  局势举行记者会。8月7日，张晓明亲自南下深圳主持“香港当前局势座谈会”，称“香港正面临回归以来最严峻局面，我就想‘打开窗户说亮话’。”当传媒退场后，张晓明又向与会的全体港区人大和政协闭门传达了“中央五点精神”，包括称反修例运动已明显带有“颜色革命”特征，提出香港要“止暴制乱”，又矢言力撑特首林郑月娥和警队。
+  <strong>
+   政府呼吁私营企业募捐
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +221,7 @@
   </div>
  </center>
  <p>
-  今年2月13日，国务院宣布免去张晓明的国务院港澳事务办公室主任职务，改任副主任分管日常工作，港澳办主任一职由全国政协副主席夏宝龙兼任。
+  另外，河北省邢台市委统战部本1月10发出名为《关于为南宫市紧急捐助疫情防控物资的倡议书》，呼吁民营企业捐助物资，物资清单包括单人床、床垫、棉被、枕头、水桶、暖瓶、热水器、医疗垃圾袋等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,7 +236,7 @@
   </div>
  </center>
  <p>
-  不过事实证明，中共高官不管是哪一派系，对香港民主抗争打压都不手软。
+  对此，民间讥讽说，政府有的是钱，比如援助非洲等，因此不会捐助任何物品。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,7 +251,9 @@
   </div>
  </center>
  <p>
-  之后，6月8日，首度“复出”的张晓明当天在港府举办的《基本法》颁布30周年网上研讨会上，也扬言，香港问题是“政治问题”，是反对派要在香港“夺权变天”、“颠覆共产党领导”。他更以造成十万人死亡的俄军血洗车臣为例，强调会毫不手软打击危害国安分子。
+  <strong>
+   齐齐哈尔封区
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -305,7 +268,11 @@
   </div>
  </center>
  <p>
-  香港民主派批评张晓明的讲话“杀气腾腾”，如同向港人宣战，为血腥镇压埋下伏笔。
+  1月12日，
+  <span href="http://china.cnr.cn/NewsFeeds/20210112/t20210112_525389363.shtml" target="_blank">
+   黑龙江省宣布
+  </span>
+  发现1例确诊、36例无症状感染者，这36名无症状感染者全出现在望奎县惠七村，当局除急升该村为中风险地区外，望奎县政府也发布通告，自1月11日早6时起，望奎县进出主城区主要通道实行机动车、电动车限行的交通管制。除参与疫情防控、医疗救护等必要出行车辆外，其他车辆一律禁止进出望奎县主城区，主要通行道路实行物理隔离和设卡管理。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -319,27 +286,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  齐齐哈尔昂昂溪区也发布公告，从1月12日10时起对昂昂溪区实行封城，所有小区、村屯封闭管理。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -352,6 +300,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41SI"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -369,13 +354,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952847.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952847.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952847.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/17/952847.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958910.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958910.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958910.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/13/958910.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/952847.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/958910.md' width='0px' height='0px'/>
